--- a/style.css
+++ b/style.css
@@ -88,17 +88,17 @@ html{
     height: auto;
     margin: auto;
     transition: .7s;
-    box-shadow: 10px 10px 5px 5px #ddd;
-    border-radius: 10%;
     cursor: pointer;
 }
 .baner img{
     max-width: 100%;
     transition: .7s;
+    opacity: 0.2;
 }
 .baner img:hover{
     transition: .7s;
-    box-shadow: 20px 20px 5px 5px #ddd;
+    opacity: 1;
+    transform: scale(1.7);
 }
 /* =================Service Section=============== */
 .service{
@@ -110,7 +110,7 @@ html{
     border: 1px solid #ddd;
     height: 600px;
     border-radius: 10px;
-    background-color: #81ecec;
+    background-color: black;
     transition: .5s;
     cursor: pointer;
 }
@@ -118,9 +118,9 @@ html{
     transition: .5s;
 }
 .box1 p:hover{
-    background-color: #C4E538;
+    background-color: #3742fa;
     box-shadow: 5px 5px 5px 5px #ddd;
-    color: black;
+    color: white;
     transform: scaleY(1.2);
 }
 .box1:hover{
@@ -129,11 +129,11 @@ html{
     color: black;
 }
 .service h3{
-    margin-bottom: 20px;
-    padding: 10px 0px;
+    margin-bottom: 60px;
+    padding: 25px 0px;
     color: black;
     font-weight: bolder;
-    background-color: #dfe6e9;
+    background-color: #130f40;
     transition: .5s;
 }
 .service h3:hover{
@@ -146,7 +146,6 @@ html{
     padding: 0px 10px;
 }
 .k1{
-    border-bottom: 2px solid black;;
     line-height: 40px;
     padding: 5px;
 }
@@ -154,7 +153,7 @@ html{
     margin-bottom: 100px;
     background-color: #1B1464;
     display: inline-block;
-    color: white;
+    color: black;
     padding: 20px 90px;
     border-radius: 5px;
     font-weight: bolder;
@@ -165,12 +164,12 @@ html{
 .service h2:hover{
     box-shadow: 5px 5px 5px 5px #ddd;
     background-color: #3742fa;
-    color: black;
+    color: white;
     
 }
 /*================Price Section============*/
 .nn{
-    height: 300px;
+    height: 350px;
 }
 /* ===============About Section============= */
 .about{
@@ -178,7 +177,7 @@ html{
     cursor: pointer;
 }
 .about h2{
-    color: #fff;
+    color: black;
     font-size: 40px;
     font-weight: bolder;
     background-color: #7158e2;
@@ -186,15 +185,33 @@ html{
     padding: 10px 25px;
     border-radius: 5px;
     margin-bottom: 20px;
+    transition: .7s;
+}
+.about h2:hover{
+    background-color: #130f40;
+    transform: scale(1.4);
+    color: white;
+}
+.about h2 a{
+    color: black;
+}
+.about h2 a:hover{
+    color: white;
 }
 .about p{
-    background-color: #2f3542;
+    background-color: blue;
     color: white;
     border-radius: 5px;
+    padding: 10px;
+    display: inline-block;
+    width: 700px;
+    font-size: 25px;
+    font-weight: bolder;
 }
 .about a{
     text-decoration: none;
     color: white;
+    transition: .7s;
 }
 /* ================Offer Section=============== */
 .offer{
@@ -237,6 +254,7 @@ html{
     margin-bottom: 80px;
     margin-top: 120px;
     color: blue;
+    transition: .7s;
 }
 .icon a{
     color: blue;
@@ -250,13 +268,33 @@ html{
     color: black;
     margin-top: 90px;
     margin-bottom: 50px;
+    transition: .7s;
     margin-left: 17px;
+}
+.icon h2:hover{
+    transform: scale(1.2);
 }
 .p{
     font-size: 160px;
     padding: 0px 20px;
     cursor: pointer;
+    color: black;
+    transition: .7s;
+}
+.p:hover{
+    transform: scale(1.4);
+}
+.a:hover{
+    color: red;
+}
+.b:hover{
     color: blue;
+}
+.c:hover{
+    color: #3ea9f2;
+}
+.d:hover{
+    color: #4aae20;
 }
 /* =====================Footer Section================= */
 .footer{
@@ -279,6 +317,9 @@ html{
     text-decoration: none;
     color: white;
 }
+.jj:hover{
+    transform: scale(1.2);
+}
 .vb{
     background-color: burlywood;
     display: inline-block;
@@ -295,4 +336,7 @@ html{
 }
 .g{
     margin-left: 7px;
+}
+.popo{
+    margin-right: 40px;
 }
